fixed header and scrolling also made JSON file visible

--- a/public/style.css
+++ b/public/style.css
@@ -4,15 +4,17 @@
 }
 
 body{
+    width: auto;
+    height: 100%;
+    overflow-y: scroll;
     background-color: #a4a4a4;
     color: #ffffff;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.42857143;
     margin: 0px;
-    overflow-y: scroll;
 }
-.header{
+header{
     background-color: #0766ff;
     border-bottom: 1px solid #0766ff;
     height: 50px;
@@ -27,7 +29,7 @@ body{
 
 }
 .main{
-    margin-top:5%;
+    margin-top: 75pt;
 }
 
 h1{
